add some notes